common/query/query_parser.go
// Code generated from Query.g4 by ANTLR 4.13.2. DO NOT EDIT.

package query // Query
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type QueryParser struct {
	*antlr.BaseParser
}

var QueryParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func queryParserInit() {
	staticData := &QueryParserStaticData
	staticData.LiteralNames = []string{
		"", "", "", "", "", "", "", "", "", "", "", "", "", "", "'='", "'!='",
		"'>'", "'>='", "'<'", "'<='", "'('", "')'", "'.'", "','",
	}
	staticData.SymbolicNames = []string{
		"", "AND", "OR", "IS", "NOT", "IN", "NULL_KEYWORD", "TRUE_KEYWORD",
		"FALSE_KEYWORD", "LIKE", "NOT_LIKE", "CONTAINS", "STARTS_WITH", "ENDS_WITH",
		"EQ", "NE", "GT", "GTE", "LT", "LTE", "LPAREN", "RPAREN", "DOT", "COMMA",
		"STRING", "NUMBER", "DIGIT", "IDENTIFIER", "WS",
	}
	staticData.RuleNames = []string{
		"predicate", "compoundPredicate", "atomicPredicate", "fieldPath", "comparisonOperator",
		"value", "valueList", "stringValue", "numericValue", "booleanValue",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// QueryParserInit initializes any static state used to implement QueryParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewQueryParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func QueryParserInit() {
	staticData := &QueryParserStaticData
	staticData.once.Do(queryParserInit)
}

// NewQueryParser produces a new parser instance for the optional input antlr.TokenStream.
func NewQueryParser(input antlr.TokenStream) *QueryParser {
	QueryParserInit()
	this := new(QueryParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &QueryParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "Query.g4"

	return this
}

// QueryParser tokens.
const (
	QueryParserEOF           = antlr.TokenEOF
	QueryParserAND           = 1
	QueryParserOR            = 2
	QueryParserIS            = 3
	QueryParserNOT           = 4
	QueryParserIN            = 5
	QueryParserNULL_KEYWORD  = 6
	QueryParserTRUE_KEYWORD  = 7
	QueryParserFALSE_KEYWORD = 8
	QueryParserLIKE          = 9
	QueryParserNOT_LIKE      = 10
	QueryParserCONTAINS      = 11
	QueryParserSTARTS_WITH   = 12
	QueryParserENDS_WITH     = 13
	QueryParserEQ            = 14
	QueryParserNE            = 15
	QueryParserGT            = 16
	QueryParserGTE           = 17
	QueryParserLT            = 18
	QueryParserLTE           = 19
	QueryParserLPAREN        = 20
	QueryParserRPAREN        = 21
	QueryParserDOT           = 22
	QueryParserCOMMA         = 23
	QueryParserSTRING        = 24
	QueryParserNUMBER        = 25
	QueryParserDIGIT         = 26
	QueryParserIDENTIFIER    = 27
	QueryParserWS            = 28
)

// QueryParser rules.
const (
	QueryParserRULE_predicate          = 0
	QueryParserRULE_compoundPredicate  = 1
	QueryParserRULE_atomicPredicate    = 2
	QueryParserRULE_fieldPath          = 3
	QueryParserRULE_comparisonOperator = 4
	QueryParserRULE_value              = 5
	QueryParserRULE_valueList          = 6
	QueryParserRULE_stringValue        = 7
	QueryParserRULE_numericValue       = 8
	QueryParserRULE_booleanValue       = 9
)

// IPredicateContext is an interface to support dynamic dispatch.
type IPredicateContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	CompoundPredicate() ICompoundPredicateContext
	EOF() antlr.TerminalNode
	AtomicPredicate() IAtomicPredicateContext

	// IsPredicateContext differentiates from other interfaces.
	IsPredicateContext()
}

type PredicateContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyPredicateContext() *PredicateContext {
	var p = new(PredicateContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = QueryParserRULE_predicate
	return p
}

func InitEmptyPredicateContext(p *PredicateContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = QueryParserRULE_predicate
}

func (*PredicateContext) IsPredicateContext() {}

func NewPredicateContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *PredicateContext {
	var p = new(PredicateContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = QueryParserRULE_predicate

	return p
}

func (s *PredicateContext) GetParser() antlr.Parser { return s.parser }

func (s *PredicateContext) CompoundPredicate() ICompoundPredicateContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ICompoundPredicateContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ICompoundPredicateContext)
}

func (s *PredicateContext) EOF() antlr.TerminalNode {
	return s.GetToken(QueryParserEOF, 0)
}

func (s *PredicateContext) AtomicPredicate() IAtomicPredicateContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IAtomicPredicateContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IAtomicPredicateContext)
}

func (s *PredicateContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *PredicateContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *PredicateContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QueryListener); ok {
		listenerT.EnterPredicate(s)
	}
}

func (s *PredicateContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QueryListener); ok {
		listenerT.ExitPredicate(s)
	}
}

func (s *PredicateContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case QueryVisitor:
		return t.VisitPredicate(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *QueryParser) Predicate() (localctx IPredicateContext) {
	localctx = NewPredicateContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, QueryParserRULE_predicate)
	p.SetState(26)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 0, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(20)
			p.CompoundPredicate()
		}
		{
			p.SetState(21)
			p.Match(QueryParserEOF)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(23)
			p.AtomicPredicate()
		}
		{
			p.SetState(24)
			p.Match(QueryParserEOF)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	case antlr.ATNInvalidAltNumber:
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ICompoundPredicateContext is an interface to support dynamic dispatch.
type ICompoundPredicateContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllAtomicPredicate() []IAtomicPredicateContext
	AtomicPredicate(i int) IAtomicPredicateContext
	AllAND() []antlr.TerminalNode
	AND(i int) antlr.TerminalNode
	AllOR() []antlr.TerminalNode
	OR(i int) antlr.TerminalNode
	LPAREN() antlr.TerminalNode
	CompoundPredicate() ICompoundPredicateContext
	RPAREN() antlr.TerminalNode

	// IsCompoundPredicateContext differentiates from other interfaces.
	IsCompoundPredicateContext()
}

type CompoundPredicateContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyCompoundPredicateContext() *CompoundPredicateContext {
	var p = new(CompoundPredicateContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = QueryParserRULE_compoundPredicate
	return p
}

func InitEmptyCompoundPredicateContext(p *CompoundPredicateContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = QueryParserRULE_compoundPredicate
}

func (*CompoundPredicateContext) IsCompoundPredicateContext() {}

func NewCompoundPredicateContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *CompoundPredicateContext {
	var p = new(CompoundPredicateContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = QueryParserRULE_compoundPredicate

	return p
}

func (s *CompoundPredicateContext) GetParser() antlr.Parser { return s.parser }

func (s *CompoundPredicateContext) AllAtomicPredicate() []IAtomicPredicateContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IAtomicPredicateContext); ok {
			len++
		}
	}

	tst := make([]IAtomicPredicateContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IAtomicPredicateContext); ok {
			tst[i] = t.(IAtomicPredicateContext)
			i++
		}
	}

	return tst
}

func (s *CompoundPredicateContext) AtomicPredicate(i int) IAtomicPredicateContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IAtomicPredicateContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IAtomicPredicateContext)
}

func (s *CompoundPredicateContext) AllAND() []antlr.TerminalNode {
	return s.GetTokens(QueryParserAND)
}

func (s *CompoundPredicateContext) AND(i int) antlr.TerminalNode {
	return s.GetToken(QueryParserAND, i)
}

func (s *CompoundPredicateContext) AllOR() []antlr.TerminalNode {
	return s.GetTokens(QueryParserOR)
}

func (s *CompoundPredicateContext) OR(i int) antlr.TerminalNode {
	return s.GetToken(QueryParserOR, i)
}

func (s *CompoundPredicateContext) LPAREN() antlr.TerminalNode {
	return s.GetToken(QueryParserLPAREN, 0)
}

func (s *CompoundPredicateContext) CompoundPredicate() ICompoundPredicateContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ICompoundPredicateContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ICompoundPredicateContext)
}

func (s *CompoundPredicateContext) RPAREN() antlr.TerminalNode {
	return s.GetToken(QueryParserRPAREN, 0)
}

func (s *CompoundPredicateContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *CompoundPredicateContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *CompoundPredicateContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QueryListener); ok {
		listenerT.EnterCompoundPredicate(s)
	}
}

func (s *CompoundPredicateContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QueryListener); ok {
		listenerT.ExitCompoundPredicate(s)
	}
}

func (s *CompoundPredicateContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case QueryVisitor:
		return t.VisitCompoundPredicate(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *QueryParser) CompoundPredicate() (localctx ICompoundPredicateContext) {
	localctx = NewCompoundPredicateContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, QueryParserRULE_compoundPredicate)
	var _la int

	p.SetState(39)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case QueryParserIDENTIFIER:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(28)
			p.AtomicPredicate()
		}
		p.SetState(31)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)

		for ok := true; ok; ok = _la == QueryParserAND || _la == QueryParserOR {
			{
				p.SetState(29)
				_la = p.GetTokenStream().LA(1)

				if !(_la == QueryParserAND || _la == QueryParserOR) {
					p.GetErrorHandler().RecoverInline(p)
				} else {
					p.GetErrorHandler().ReportMatch(p)
					p.Consume()
				}
			}
			{
				p.SetState(30)
				p.AtomicPredicate()
			}

			p.SetState(33)
			p.GetErrorHandler().Sync(p)
			if p.HasError() {
				goto errorExit
			}
			_la = p.GetTokenStream().LA(1)
		}

	case QueryParserLPAREN:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(35)
			p.Match(QueryParserLPAREN)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(36)
			p.CompoundPredicate()
		}
		{
			p.SetState(37)
			p.Match(QueryParserRPAREN)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	default:
		p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IAtomicPredicateContext is an interface to support dynamic dispatch.
type IAtomicPredicateContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	FieldPath() IFieldPathContext
	ComparisonOperator() IComparisonOperatorContext
	Value() IValueContext
	IS() antlr.TerminalNode
	NULL_KEYWORD() antlr.TerminalNode
	NOT() antlr.TerminalNode
	IN() antlr.TerminalNode
	LPAREN() antlr.TerminalNode
	ValueList() IValueListContext
	RPAREN() antlr.TerminalNode

	// IsAtomicPredicateContext differentiates from other interfaces.
	IsAtomicPredicateContext()
}

type AtomicPredicateContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyAtomicPredicateContext() *AtomicPredicateContext {
	var p = new(AtomicPredicateContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = QueryParserRULE_atomicPredicate
	return p
}

func InitEmptyAtomicPredicateContext(p *AtomicPredicateContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = QueryParserRULE_atomicPredicate
}

func (*AtomicPredicateContext) IsAtomicPredicateContext() {}

func NewAtomicPredicateContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *AtomicPredicateContext {
	var p = new(AtomicPredicateContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = QueryParserRULE_atomicPredicate

	return p
}

func (s *AtomicPredicateContext) GetParser() antlr.Parser { return s.parser }

func (s *AtomicPredicateContext) FieldPath() IFieldPathContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFieldPathContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFieldPathContext)
}

func (s *AtomicPredicateContext) ComparisonOperator() IComparisonOperatorContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IComparisonOperatorContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IComparisonOperatorContext)
}

func (s *AtomicPredicateContext) Value() IValueContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IValueContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IValueContext)
}

func (s *AtomicPredicateContext) IS() antlr.TerminalNode {
	return s.GetToken(QueryParserIS, 0)
}

func (s *AtomicPredicateContext) NULL_KEYWORD() antlr.TerminalNode {
	return s.GetToken(QueryParserNULL_KEYWORD, 0)
}

func (s *AtomicPredicateContext) NOT() antlr.TerminalNode {
	return s.GetToken(QueryParserNOT, 0)
}

func (s *AtomicPredicateContext) IN() antlr.TerminalNode {
	return s.GetToken(QueryParserIN, 0)
}

func (s *AtomicPredicateContext) LPAREN() antlr.TerminalNode {
	return s.GetToken(QueryParserLPAREN, 0)
}

func (s *AtomicPredicateContext) ValueList() IValueListContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IValueListContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IValueListContext)
}

func (s *AtomicPredicateContext) RPAREN() antlr.TerminalNode {
	return s.GetToken(QueryParserRPAREN, 0)
}

func (s *AtomicPredicateContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *AtomicPredicateContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *AtomicPredicateContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QueryListener); ok {
		listenerT.EnterAtomicPredicate(s)
	}
}

func (s *AtomicPredicateContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QueryListener); ok {
		listenerT.ExitAtomicPredicate(s)
	}
}

func (s *AtomicPredicateContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case QueryVisitor:
		return t.VisitAtomicPredicate(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *QueryParser) AtomicPredicate() (localctx IAtomicPredicateContext) {
	localctx = NewAtomicPredicateContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, QueryParserRULE_atomicPredicate)
	p.SetState(67)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 3, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(41)
			p.FieldPath()
		}
		{
			p.SetState(42)
			p.ComparisonOperator()
		}
		{
			p.SetState(43)
			p.Value()
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(45)
			p.FieldPath()
		}
		{
			p.SetState(46)
			p.Match(QueryParserIS)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(47)
			p.Match(QueryParserNULL_KEYWORD)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	case 3:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(49)
			p.FieldPath()
		}
		{
			p.SetState(50)
			p.Match(QueryParserIS)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(51)
			p.Match(QueryParserNOT)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(52)
			p.Match(QueryParserNULL_KEYWORD)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	case 4:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(54)
			p.FieldPath()
		}
		{
			p.SetState(55)
			p.Match(QueryParserIN)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(56)
			p.Match(QueryParserLPAREN)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(57)
			p.ValueList()
		}
		{
			p.SetState(58)
			p.Match(QueryParserRPAREN)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	case 5:
		p.EnterOuterAlt(localctx, 5)
		{
			p.SetState(60)
			p.FieldPath()
		}
		{
			p.SetState(61)
			p.Match(QueryParserNOT)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(62)
			p.Match(QueryParserIN)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(63)
			p.Match(QueryParserLPAREN)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(64)
			p.ValueList()
		}
		{
			p.SetState(65)
			p.Match(QueryParserRPAREN)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	case antlr.ATNInvalidAltNumber:
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IFieldPathContext is an interface to support dynamic dispatch.
type IFieldPathContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllIDENTIFIER() []antlr.TerminalNode
	IDENTIFIER(i int) antlr.TerminalNode
	AllDOT() []antlr.TerminalNode
	DOT(i int) antlr.TerminalNode

	// IsFieldPathContext differentiates from other interfaces.
	IsFieldPathContext()
}

type FieldPathContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFieldPathContext() *FieldPathContext {
	var p = new(FieldPathContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = QueryParserRULE_fieldPath
	return p
}

func InitEmptyFieldPathContext(p *FieldPathContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = QueryParserRULE_fieldPath
}

func (*FieldPathContext) IsFieldPathContext() {}

func NewFieldPathContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *FieldPathContext {
	var p = new(FieldPathContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = QueryParserRULE_fieldPath

	return p
}

func (s *FieldPathContext) GetParser() antlr.Parser { return s.parser }

func (s *FieldPathContext) AllIDENTIFIER() []antlr.TerminalNode {
	return s.GetTokens(QueryParserIDENTIFIER)
}

func (s *FieldPathContext) IDENTIFIER(i int) antlr.TerminalNode {
	return s.GetToken(QueryParserIDENTIFIER, i)
}

func (s *FieldPathContext) AllDOT() []antlr.TerminalNode {
	return s.GetTokens(QueryParserDOT)
}

func (s *FieldPathContext) DOT(i int) antlr.TerminalNode {
	return s.GetToken(QueryParserDOT, i)
}

func (s *FieldPathContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FieldPathContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *FieldPathContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QueryListener); ok {
		listenerT.EnterFieldPath(s)
	}
}

func (s *FieldPathContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QueryListener); ok {
		listenerT.ExitFieldPath(s)
	}
}

func (s *FieldPathContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case QueryVisitor:
		return t.VisitFieldPath(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *QueryParser) FieldPath() (localctx IFieldPathContext) {
	localctx = NewFieldPathContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, QueryParserRULE_fieldPath)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(69)
		p.Match(QueryParserIDENTIFIER)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(74)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for _la == QueryParserDOT {
		{
			p.SetState(70)
			p.Match(QueryParserDOT)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(71)
			p.Match(QueryParserIDENTIFIER)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

		p.SetState(76)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IComparisonOperatorContext is an interface to support dynamic dispatch.
type IComparisonOperatorContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	EQ() antlr.TerminalNode
	NE() antlr.TerminalNode
	GT() antlr.TerminalNode
	GTE() antlr.TerminalNode
	LT() antlr.TerminalNode
	LTE() antlr.TerminalNode
	LIKE() antlr.TerminalNode
	NOT_LIKE() antlr.TerminalNode
	CONTAINS() antlr.TerminalNode
	STARTS_WITH() antlr.TerminalNode
	ENDS_WITH() antlr.TerminalNode

	// IsComparisonOperatorContext differentiates from other interfaces.
	IsComparisonOperatorContext()
}

type ComparisonOperatorContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyComparisonOperatorContext() *ComparisonOperatorContext {
	var p = new(ComparisonOperatorContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = QueryParserRULE_comparisonOperator
	return p
}

func InitEmptyComparisonOperatorContext(p *ComparisonOperatorContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = QueryParserRULE_comparisonOperator
}

func (*ComparisonOperatorContext) IsComparisonOperatorContext() {}

func NewComparisonOperatorContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ComparisonOperatorContext {
	var p = new(ComparisonOperatorContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = QueryParserRULE_comparisonOperator

	return p
}

func (s *ComparisonOperatorContext) GetParser() antlr.Parser { return s.parser }

func (s *ComparisonOperatorContext) EQ() antlr.TerminalNode {
	return s.GetToken(QueryParserEQ, 0)
}
